--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,32 @@
 spring:
   application:
     name: zzx-ai-code-backend
+  profiles:
+    active: local
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://${zzx-ai-code.spring.datasource.host}:${zzx-ai-code.spring.datasource.port}/zzx_ai_code?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&allowPublicKeyRetrieval=true&useSSL=false
+    username: ${zzx-ai-code.spring.datasource.username}
+    password: ${zzx-ai-code.spring.datasource.password}
 server:
   port: 8123
   servlet:
     context-path: /api
+
+# mybatis-plus 相关配置
+mybatis-plus:
+  mapper-locations: classpath:/mapper/**.xml
+  configuration:
+    map-underscore-to-camel-case: false    # MyBatis 下划线转驼峰
+    # 仅在开发环境开启日志
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+  global-config:
+    # 启用 SQL 运行器
+    enable-sql-runner: true
+    db-config:
+      logic-delete-field: is_delete  # 全局逻辑删除
+      logic-delete-value: 1    # 逻辑删除值（默认为1）
+      logic-not-delete-value: 0  # 逻辑未删除值（默认为0）
 
 # springdoc-openapi
 springdoc:
