AI生成应用开发 + 代码优化

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,3 +23,26 @@ knife4j:
   enable: true
   setting:
     language: zh_cn
+
+# AI
+langchain4j:
+  open-ai:
+    chat-model:
+      base-url: ${zzx-ai-code.langchain4j.open-ai.chat-model.base-url}
+      api-key: ${zzx-ai-code.langchain4j.open-ai.chat-model.api-key}
+      model-name: ${zzx-ai-code.langchain4j.open-ai.chat-model.model-name}
+      log-requests: true
+      log-responses: true
+      max-tokens: 8192 # 生成最大的token数
+      # 严格json
+      strict-json-schema: true
+      response-format: json-object
+      max-retries: 0 # 最大重试次数
+    # 流式
+    streaming-chat-model:
+      base-url: ${zzx-ai-code.langchain4j.open-ai.chat-model.base-url}
+      api-key: ${zzx-ai-code.langchain4j.open-ai.chat-model.api-key}
+      model-name: ${zzx-ai-code.langchain4j.open-ai.chat-model.model-name}
+      log-requests: true
+      log-responses: true
+      max-tokens: 8192 # 生成最大的token数
