--- a/zzx-ai-code-frontend/package.json
+++ b/zzx-ai-code-frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "zzx-ai-code-frontend",
+  "name": "yu-ai-code-mother-frontend",
   "version": "0.0.0",
   "private": true,
   "type": "module",
@@ -15,7 +15,10 @@
   },
   "dependencies": {
     "ant-design-vue": "^4.2.6",
-    "axios": "^1.13.2",
+    "axios": "^1.11.0",
+    "@types/markdown-it": "^14.1.2",
+    "highlight.js": "^11.11.1",
+    "markdown-it": "^14.1.0",
     "pinia": "^3.0.3",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1"
@@ -23,7 +26,7 @@
   "devDependencies": {
     "@tsconfig/node22": "^22.0.2",
     "@types/node": "^22.15.32",
-    "@umijs/openapi": "^1.14.1",
+    "@umijs/openapi": "^1.13.15",
     "@vitejs/plugin-vue": "^6.0.0",
     "@vue/eslint-config-prettier": "^10.2.0",
     "@vue/eslint-config-typescript": "^14.5.1",
