--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,6 +9,11 @@ spring:
     url: jdbc:mysql://${zzx-ai-code.spring.datasource.host}:${zzx-ai-code.spring.datasource.port}/zzx_ai_code?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&allowPublicKeyRetrieval=true&useSSL=false
     username: ${zzx-ai-code.spring.datasource.username}
     password: ${zzx-ai-code.spring.datasource.password}
+  session:
+    # session 配置
+    store-type: redis
+    # session 超时时间
+    timeout: 2592000
   # redis
   data:
     redis:
@@ -20,6 +25,10 @@ server:
   port: 8123
   servlet:
     context-path: /api
+    # cookie 30 天过期
+    session:
+      cookie:
+        max-age: 2592000
 
 # springdoc-openapi
 springdoc:
